// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardsList should render nothing if no items are provided 1`] = `
<div>
  <div
    class="container"
  />
</div>
`;

exports[`CardsList should render the cards list properly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="itemWrapper"
    >
      <div
        class="container small"
      >
        <div
          class="card frontface"
        >
           
          5
        </div>
        <div
          class="owner"
        />
      </div>
    </div>
  </div>
</div>
`;
